--- a/src/main/resources/log4j.properties
+++ b/src/main/resources/log4j.properties
@@ -7,9 +7,22 @@ log4j.appender.stdout.layout=org.apache.log4j.PatternLayout
 log4j.appender.stdout.layout.ConversionPattern=%d{yyyy-MM-dd HH:mm:ss} %-5p %c{1}:%L - %m%n
 
 # Redirect log messages to a log file, support file rolling.
-log4j.appender.file=org.apache.log4j.RollingFileAppender
-log4j.appender.file.File=./logs/log4j-application.log
-log4j.appender.file.MaxFileSize=5MB
-log4j.appender.file.MaxBackupIndex=10
-log4j.appender.file.layout=org.apache.log4j.PatternLayout
-log4j.appender.file.layout.ConversionPattern=%d{yyyy-MM-dd HH:mm:ss} %-5p %c{1}:%L - %m%n
+log4j.appender.debugLog=org.apache.log4j.FileAppender
+log4j.appender.debugLog.File=./logs/debug.log
+log4j.appender.debugLog.MaxFileSize=5MB
+log4j.appender.debugLog.MaxBackupIndex=10
+log4j.appender.debugLog.layout=org.apache.log4j.PatternLayout
+log4j.appender.debugLog.layout.ConversionPattern=%d{yyyy-MM-dd HH:mm:ss} %-5p %c{1}:%L - %m%n
+
+log4j.appender.infoLog=org.apache.log4j.FileAppender
+log4j.appender.infoLog.File=./logs/info.log
+log4j.appender.infoLog.MaxFileSize=5MB
+log4j.appender.infoLog.MaxBackupIndex=10
+log4j.appender.infoLog.layout=org.apache.log4j.PatternLayout
+log4j.appender.infoLog.layout.ConversionPattern=%d{yyyy-MM-dd HH:mm:ss} %-5p %c{1}:%L - %m%n
+
+log4j.category.debugLogger=DEBUG, debugLog
+log4j.additivity.debugLogger=false
+
+log4j.category.infoLogger=TRACE, infoLog
+log4j.additivity.infoLogger=false
